# rPPG_demo

./: .gitignore  AGENTS.md  README.md  pyproject.toml  run_app.py
docs/: 00_tasks.md  01_requirements.md  02_rppg_algorithm.md  03_design.md  04_technical_design.md  05_web_app_spec.md
src/rppg/: __init__.py  acf_bpm.py  app.py  bpm.py  capture.py  chrom.py  hilbert_if.py  pos.py  preprocess.py  quality.py  recorder.py  respiration.py  roi.py  service.py  tracker.py
tests/: conftest.py  test_bpm.py  test_color_proj.py  test_estimators.py  test_preprocess.py  test_quality.py  test_recorder.py  test_respiration.py  test_roi_mean.py  test_tracker.py
web/frontend/: index.html
