[project]
name = "rppg-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dearpygui>=2.1.0",
    "mediapipe>=0.10.21",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "scipy>=1.16.1",
]

[tool.ruff]
# 1行の最大文字数
line-length = 100

[tool.ruff.lint]
# チェックするエラーの種類
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
]

[dependency-groups]
dev = [
    "ruff>=0.12.10",
    "taskipy>=1.14.1",
]

[tool.taskipy]

[tool.taskipy.tasks]
# Run the app with src layout (no editable install required)
run = "PYTHONPATH=src python -m rppg.app"
lint = "ruff check ."
fmt = "ruff format ."
